fixed padding + overflow on body

--- a/css/serpentlion.css
+++ b/css/serpentlion.css
@@ -1,9 +1,4 @@
 
-html, body, .pieces img {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
 
 #preload-01 { background: url(works/2.png) no-repeat -9999px -9999px; }
 #preload-02 { background: url(works/5.png) no-repeat -9999px -9999px; }
@@ -13,17 +8,29 @@ html, body, .pieces img {
 #preload-06 { background: url(works/16.png) no-repeat -9999px -9999px; }
 #preload-07 { background: url(works/trianglepainting.png) no-repeat -9999px -9999px; }
 
-body {
-  /*background-image: url("staticslow.gif");*/
-  background-color: #0B0B0B;
+
+html, body {
+  opacity: 50%;
   size: 100%;
-  color: #fff;
   height: 100%;
   margin: 0;
   min-height: 100%;
   overflow: hidden;
-  overflow-y: hidden;
   position: relative;
+}
+
+
+.pieces img{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+
+body {
+  /*background-image: url("staticslow.gif");*/
+  background-color: #0B0B0B;
+ 
 }
 
 #products-body {
@@ -312,7 +319,7 @@ p {
 
 
 .slick-slide {
-  padding: 40px;
+  padding: 50px;
 
 
 }
@@ -379,15 +386,13 @@ p {
 
 .slick-center:hover .artslide img  {
   transform: scale(1.08);
- 
   transition: 0.6s;
-  padding: 20.88px;
   filter: drop-shadow(3px 17px 8px #6d6d6d);
 }
 
 .slick-center:hover .artslide h1  {
-  padding-top: 64.88px;
-  padding-bottom: 8.5px;
+  /*padding-top: 64.88px;
+  padding-bottom: 8.5px;*/
   transition: 1.093s cubic-bezier(0.165, 0.84, 0.44, 1);
 
 }
